Jaeksoft OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.2.2

New features:
- 3287318: Upgrade to seleniumhq 2.x	
- 3266524: Return terms from non stored fields	
- 3266520: Cache management in Web UI
- 3253614: Upgrade to PDFBox 1.5.x
- 2973374: Upgrade to ZKoss 5.0.6
- 3213190: Negative filtering
- 3175074: Screenshot of a webpage
- 3094822: SiteMap functionnality

Bug fixes:
- 3290939: NPE when no default field is selected
- 3278815: The language is not detected in PDF files
- 3192429: Not the correct definition of the Russian language

OpenSearchServer 1.2.1

New features:
- 3176150: time/date stamp
- 3186042: Disable not being allowed (robots.txt)	
- 3182953: Crawl URL from a database	
- 3182950: Pattern and exclusion list deactivable
- 3182097: Adding field boost support
- 3175585: More like this feature
- 3169421: Japanese and Korean support
- 3159477: Identify identical web pages

Bug fixes:
- 3178432: Wrong cron values in the scheduler

OpenSearchServer 1.2

New features:
- 3151757: Upgrade to PDFBox 1.4.x
- 3141193: FTP/FTPS support in the file crawler
- 3141192: SMB/CIFS support in file crawler
- 3034238: Crawler able to log in protected web site
- 3011773: Add Quartz as scheduler service
- 3138603: Upgrade Tomcat to version 6.0.xx
- 3103055: Convert HTML entities
- 3087916: Upgrade to PDFBox 1.2
- 3043692: Torrent Parser
- 3042488: Audio parser
- 2882260: Add a parser for text/plain
- 3010010: RTF parser
- 3038733: Add a shingle filter
- 3036262: Log management
- 3031800: Schema interface
- 3031204: Adding NGram support
- 3008440: Index replication
- 3026212: API and interface for document deletion
- 3023327: Sub domain extraction in Web Crawler
- 2820289: Database crawler
- 3019035: Neglight dynamic url while crawling 
- 3017277: Allow wildcard query in the URL browser
- 3016491: Url Exporter